--- a/generators/app/templates/src/styles/main.scss
+++ b/generators/app/templates/src/styles/main.scss
@@ -1,30 +1,18 @@
 /** You can remove this file if you don't need any styles */
 
-$plugin-id: 'a2';
+$plugin-id: '<%= pluginId %>';
 $lib-name: 'obsidian-dev-utils';
 
 .#{$plugin-id}.#{$lib-name} {
-  &.alert-modal {
-    color: blue;
-  }
+  &.alert-modal {}
 
-  &.confirm-modal {
-    color: red;
-  }
+  &.confirm-modal {}
 
   &.plugin-settings-tab {
-    color: navajowhite;
-
-    .value-component-invalid {
-      color: green;
-    }
+    .value-component-invalid {}
   }
 
-  &.prompt-modal {
-    color: yellow;
-  }
+  &.prompt-modal {}
 
-  &.select-item-modal {
-    color: orange;
-  }
+  &.select-item-modal {}
 }
